fixed preloader not covering whole screen

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -15,7 +15,7 @@ body{
     width: 100%; 
     background-color: rgb(21, 21, 21);
     height: 100%;
-    position: absolute;
+    position: fixed;
     scroll-behavior: none;
     z-index: 9999; 
     display: flex;
